[project]
name = "sketchpad-studio"
version = "0.1.0"
description = "A small desktop sketchpad app built with pygame."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pygame>=2.6,<3"]

[project.scripts]
sketchpad = "sketchpad:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
